# OpenVDI

./: .env.example  .gitignore  README.md  docker-compose.yml  installation.md  test_proxmox.py
broker/: README.md  alembic.ini  pyproject.toml
broker/alembic/: env.py
broker/alembic/versions/: 0001_baseline_m3.py  0002_auth_tokens.py
broker/app/: config.py  crypto.py  database.py  logging.py  main.py
broker/app/api/: __init__.py  admin_users.py  audit.py  auth.py  clusters.py  dashboard.py  desktops.py  entitlements.py  pools.py  router.py  sessions.py  templates.py  user.py
broker/app/middleware/: __init__.py  audit.py  auth.py  request_id.py
broker/app/models/: __init__.py  audit.py  auth_token.py  cluster.py  desktop.py  entitlement.py  pool.py  session.py  session_metrics.py  template.py
broker/app/providers/: __init__.py  base.py  exceptions.py
broker/app/providers/proxmox/: __init__.py  client.py  exceptions.py  params.py  provider.py  types.py
broker/app/proxmox/: __init__.py  client.py  exceptions.py
broker/app/schemas/: __init__.py  audit.py  auth.py  cluster.py  common.py  connect.py  dashboard.py  desktop.py  entitlement.py  pool.py  session.py  template.py  user.py
broker/app/services/: __init__.py  audit_service.py  auth_service.py  broker.py  cluster_service.py  jwt_service.py  ldap_service.py  provisioner.py  session_tracker.py  task_tracker.py  user_diagnostics.py  vmid_allocator.py
broker/app/workers/: __init__.py  audit_retention.py  base.py  echo.py  health_checker.py  pool_provisioner.py  session_monitor.py  task_tracker.py
broker/scripts/: test_jsonb_null_fix.py  test_m2_end_to_end.sh  test_proxmox_provider.py  test_task_tracker_mock.py
broker/scripts/lib/: m2_helpers.sh
broker/tests/: _db.py  conformance.yaml.example  conftest.py  test_logging.py
broker/tests/api/: test_admin_users.py  test_auth_cookies.py
broker/tests/middleware/: test_jwt_auth_middleware.py  test_request_id.py
broker/tests/providers/conformance/: README.md  conftest.py  test_capabilities.py  test_guest_agent.py  test_lifecycle.py  test_snapshots.py  test_tasks.py
broker/tests/services/: test_jwt_service.py  test_ldap_service.py  test_provisioner_refresh.py
broker/tests/workers/: test_audit_retention.py  test_health_checker.py  test_leader_election.py  test_pool_provisioner.py  test_session_monitor.py  test_task_tracker.py  test_worker_runner.py
mcp/openvdi-admin/: .env.example  .gitignore  README.md  pyproject.toml
mcp/openvdi-admin/examples/: README.md  claude-code-config.toml  claude-desktop-config.json
mcp/openvdi-admin/scripts/: README.md  acceptance.sh
mcp/openvdi-admin/src/openvdi_admin/: __init__.py  _mcp_instance.py  _request_context.py  _tool_wrapper.py  auth.py  client.py  config.py  errors.py  logging.py  server.py
mcp/openvdi-admin/tests/: conftest.py  test_auth.py  test_client.py  test_errors.py  test_logging.py  test_request_context.py  test_tool_wrapper.py
mcp/openvdi-admin/tests/intent/: test_deploy_pool.py  test_diagnose_pool.py  test_diagnose_user.py  test_health_check.py  test_reset_environment.py  test_result.py  test_smoke_test.py
mcp/openvdi-admin/tests/tools/: test_audit.py  test_clusters.py  test_common.py  test_dashboard.py  test_desktops.py  test_entitlements.py  test_polling.py  test_pools.py  test_sessions.py  test_templates.py  (+1 more)
(+158 files in other folders)
