[project]
name = "openvdi-broker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42",
    "python-jose[cryptography]>=3.3",
    "ldap3>=2.9",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped event loop so the module-level
# `app.database.engine` (which caches its asyncpg pool to whatever
# loop first touched it) doesn't see "Future attached to different
# loop" errors as later tests run on fresh loops. Workers tests in
# particular drive the engine through _acquire_leader_lock; sharing
# the loop avoids needing per-test engine-recreation.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false
